syntax = "proto3";

package ProtocolBuffer;

// special type range:        1  - 10
// login module type range:   11 - 40
// chat module type range:    41 - 70
// contact module type range: 71 - 100
message ProtoMessage{
  //
  int32 seq = 1;
  
  oneof msg{
    // special type:
	Heartbeat heartbeat = 5;
	
    // module: login
	SigninRequest signinRequest = 11;
	SigninResponse signinResponse = 12;
	SignoutRequest signoutRequest = 13;
	SignupMailRequest signupMailRequest = 14;
	SignupMailResponse signupMailResponse = 15;
	SignupCaptchaRequest SignupCaptchaRequest = 16;
	SignupCaptchaResponse SignupCaptchaResponse = 17;
	SignupInfoRequest signupInfoRequest = 18;
	SignupInfoResponse signupInfoResponse = 19;
	PasswordModifyCaptchaRequest passwordModifyCaptchaRequest = 20;
	PasswordModifyCaptchaResponse passwordModifyCaptchaResponse = 21;
	PassordModifyRequest passordModifyRequest = 22;
	PassordModifyResponse passordModifyResponse = 23;

	// module: chat
	
	// module: contact
  }
}


message Heartbeat{

}


// func: sign in
message SigninRequest{
	string mail_address = 1;
	string password = 2;
}

message SigninResponse{
  bool status = 1;
  string mail_address = 2;
}
// func: sign out
// ①注销包（客户端->服务端，服务端接受到这个包，表示客户端主动登出，将为该用户执行登出操作，但并不释放连接，客户端也保证用户登出）
message SignoutRequest{
  // 服务没收到有影响吗
}

// func: sign up
message SignupMailRequest{
	string mail_address = 1;
}

message SignupMailResponse{
	bool status = 1;
	string mail_address = 2;
}

message SignupCaptchaRequest{
	string mail_address = 1;
}

message SignupCaptchaResponse{
	bool status = 1;//验证码是否发送成功
	string mail_address = 2;
}

message SignupInfoRequest{
	string mail_address = 1;
	string password = 2;
    string nickname = 3;
	string captcha = 4;
}

message SignupInfoResponse{
  bool status = 1;
  string mail_address = 2;
}

// func: change password

message PasswordModifyCaptchaRequest{
	string mail_address = 1;
}

message PasswordModifyCaptchaResponse{
	bool status = 1;
	string mail_address = 2;
}

message PassordModifyRequest{
	string mail_address = 1;
	string captcha = 2;
	string password = 3;
}

message PassordModifyResponse{
	bool status = 1;
	string mail_address = 2;
}